--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ pycocotools
 tqdm
 pillow
 tensorboard >= 1.14
+
+# Nvidia Apex (optional) for mixed precision training --------------------------
+# git clone https://github.com/NVIDIA/apex && cd apex && pip install -v --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" . --user
