Update and rename cd53s-pacsp-mish.cfg to yolov4-pacsp-mish.cfg

--- a/cfg/yolov4-pacsp-mish.cfg
+++ b/cfg/yolov4-pacsp-mish.cfg
@@ -5,8 +5,8 @@
 # Training
 batch=64
 subdivisions=8
-width=512
-height=512
+width=640
+height=640
 channels=3
 momentum=0.949
 decay=0.0005
@@ -24,10 +24,6 @@ scales=.1,.1
 
 #cutmix=1
 mosaic=1
-
-#23:104x104 54:52x52 85:26x26 104:13x13 for 416
-
-
 
 [convolutional]
 batch_normalize=1
@@ -1031,7 +1027,8 @@ num=9
 jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
-random=1
+random=0
+resize=1.5
 scale_x_y = 1.05
 iou_thresh=0.213
 cls_normalizer=1.0
@@ -1140,7 +1137,8 @@ num=9
 jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
-random=1
+random=0
+resize=1.5
 scale_x_y = 1.05
 iou_thresh=0.213
 cls_normalizer=1.0
@@ -1249,7 +1247,8 @@ num=9
 jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
-random=1
+random=0
+resize=1.5
 scale_x_y = 1.05
 iou_thresh=0.213
 cls_normalizer=1.0
